# agentic-rag-sdk

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  marketplace.json  pyproject.toml
.agent/workflows/: add-corpora.md  adk-advanced-thinking.md  adk-advanced-visual-builder.md  adk-agents-create.md  adk-agents-multi-model.md  adk-behavior-artifacts.md  adk-behavior-callbacks.md  adk-behavior-confirmation.md  adk-behavior-state.md  adk-create-workflow.md  adk-deploy-agent-engine.md  adk-init-create-project.md  adk-init-yaml-config.md  adk-master.md  adk-memory-grounding.md  adk-memory-service.md  adk-multi-agent-a2a.md  adk-multi-agent-advanced.md  adk-multi-agent-delegation.md  adk-multi-agent-orchestration.md  adk-quality-evals.md  adk-quality-logging.md  adk-quality-observability.md  adk-quality-tracing.md  adk-quality-user-sim.md  adk-security-auth.md  adk-security-guardrails.md  adk-streaming-bidi.md  adk-streaming-multimodal.md  adk-streaming-sse.md  adk-tools-builtin.md  adk-tools-computer-use.md  adk-tools-function.md  adk-tools-long-running.md  adk-tools-mcp.md  adk-tools-openapi.md  adk-tools-third-party.md  rag-query.md
.agent/workflows/adk-dev-system-spec/: adk-dev-system-prompt-chain.md
.agent/workflows/adk-workflow/: adk-dev-system.md  adk-workflow-definition.md  antigravity-workflow-system.md  workflow-toc.md
.github/workflows/: update-submodules.yml
adk-builder/: README.md
adk-builder/.claude-plugin/: marketplace.json  plugin.json
adk-builder/agents/: adk-executor.md  adk-planner.md  adk-verifier.md
adk-builder/commands/: adk-add-behavior.md  adk-add-memory.md  adk-add-tool.md  adk-create-agent.md  adk-deploy.md  adk-init.md  adk-multi-agent.md  adk-secure.md  adk-streaming.md  adk-test.md
adk-builder/skills/adk-advanced/: SKILL.md
adk-builder/skills/adk-agents/: SKILL.md
adk-builder/skills/adk-behavior/: SKILL.md
adk-builder/skills/adk-deployment/: SKILL.md
adk-builder/skills/adk-getting-started/: SKILL.md
adk-builder/skills/adk-memory/: SKILL.md
adk-builder/skills/adk-multi-agent/: SKILL.md
adk-builder/skills/adk-quality/: SKILL.md
adk-builder/skills/adk-security/: SKILL.md
config/: settings.yaml
docs/: rag-query.md
docs/adk-dev-system-spec/: configuration.md  deployment.md  project-structure.md
docs/plans/: 2026-01-07-adk-builder-plugin-implementation.md  2026-01-08-adk-builder-plugin-redesign.md  CLAUDE.md
docs/spec/: Foundation_and_Environment.md  corpus_embedding_targets.md  hybrid_query.md  ingestion_upsert.md  qdrant_schema_and_config.md  rerank_retrieval.md
docs/voyage-qdrant-rag-spec/: hybrid_query.md
manifests/: corpus_manifest.json
src/grounding/: __init__.py  config.py
src/rag_mcp_server/: server.py
(+54 files in other folders)
