[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-qdrant-voyage"
version = "0.1.0"
description = "RAG pipeline with Voyage AI embeddings and Qdrant vector storage, plus 43 ADK agent development workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "MattMagg" }
]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "vector-database",
    "qdrant",
    "voyage-ai",
    "embeddings",
    "reranking",
    "hybrid-search",
    "semantic-search",
    "adk",
    "agent-development-kit",
    "google-adk",
    "ai-agents",
    "llm",
    "grounding",
    "ide-workflows",
    "coding-agent",
    "antigravity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "qdrant-client>=1.12.0",
    "voyageai>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "fastembed>=0.5.0",
    "fastmcp>=2.0.0",
]

[project.scripts]
rag-mcp-server = "rag_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/MattMagg/rag_qdrant_voyage"
Repository = "https://github.com/MattMagg/rag_qdrant_voyage"
Documentation = "https://github.com/MattMagg/rag_qdrant_voyage#readme"
Issues = "https://github.com/MattMagg/rag_qdrant_voyage/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/grounding", "src/rag_mcp_server"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

